Changed SQL statement to not return recipes that returned with a null description and instructions.  Cleaned up the CSS and pagination.  Added footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -8,15 +8,20 @@
   <body>
   <div class="wrapper">
     <h1><%= @title %></h1>
-      <% for i in ("A".."Z") %>
-        <a href="/recipes?page=<%= i %>"><%= i %></a>
-        <% unless i == "Z" %> |
+      <ul class="pure-paginator">
+        <% for i in ("A".."Z") %>
+          <li class="pure-button"><a href="/recipes?page=<%= i %>"><%= i %></a></li>
         <% end %>
-      <% end %>
-    </br></br>
+      </ul>
+    </br>
 
       <%= yield %>
 
+    </br>
+    <p>Created by: <a href="https://github.com/Maimer/">Nicholas Lee</a></p>
+    <p><a href="https://github.com/Maimer/recipe_box">Github Repo</a></p>
+    </br>
+    </br>
     </body>
   </div>
 </html>
